refactor: update dependencies to use versioned library references and enhance CacheLoader with subtype support